# app/Models/KycRequest.php
@@ -14,7 +14,10 @@ class KycRequest extends Model
         'full_name',
         'country',
         'id_number',
-        'id_image',
+        'document_type',
+        'id_front_image',
+        'id_back_image',
+        'passport_image',
         'selfie_image',
         'status',
         'admin_note',
